# unreal-mcp

./: CLAUDE.md  README.md
Docs/: Animation-Tools.md  BehaviorTree-Tools.md  Editor-Tools.md  README.md
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/: UnrealMCP.Build.cs
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Private/: UnrealMCPBridge.cpp
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Private/Commands/: AnimationCommandRegistration.cpp  BehaviorTreeCommandRegistration.cpp  EditorCommandRegistration.cpp  UnrealMCPMainDispatcher.cpp
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Private/Commands/Animation/: GetAnimMontageMetadataCommand.cpp  GetAnimSequenceMetadataCommand.cpp
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Private/Commands/BehaviorTree/: GetBehaviorTreeMetadataCommand.cpp  GetBlackboardMetadataCommand.cpp
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Private/Services/: AnimationBlueprintService.cpp  BehaviorTreeService.cpp
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Public/Commands/: AnimationCommandRegistration.h  BehaviorTreeCommandRegistration.h
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Public/Services/: AnimationBlueprintService.h  BehaviorTreeService.h  IAnimationBlueprintService.h  IBehaviorTreeService.h
Python/: animation_mcp_server.py  behaviortree_mcp_server.py  pyproject.toml
Python/editor_tools/: editor_tools.py
Python/tests/: conftest.py  test_anim_montage.py  test_anim_sequence.py  test_behavior_tree.py  test_blackboard.py  test_dump_asset.py
(+10 files in other folders)
